@@ -1,6 +1,8 @@
                     Changes made to Pyjamas since 0.5p1
                     -----------------------------------
 
+ * Added basic support for list comprehension (no ifs/multiple for)
+
  * Added builtin import test, which will fail if the import code
    gets to smart
 
